Fixed major issues reported by sonar (Performance - Method invokes inefficient Boolean constructor; use Boolean.valueOf(...) instead)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63812 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261